clusters/homelab/apps/istio/octelium-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: octelium-api-nodeport
  namespace: istio-system
  annotations:
    homelab.rst.io/access-plane: octelium
  labels:
    app.kubernetes.io/name: octelium-api-nodeport
    app.kubernetes.io/part-of: istio
spec:
  type: NodePort
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30443
