clusters/homelab/apps/istio/octelium-api-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: octelium-api-gateway
  namespace: istio-system
  annotations:
    homelab.rst.io/access-plane: octelium
    homelab.rst.io/public-funnel: "false"
spec:
  selector:
    istio: octelium-api-ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        credentialName: stinkyboi-com-tls
