clusters/homelab/apps/istio/tailnet-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: tailnet-gateway
  namespace: istio-system
  annotations:
    homelab.rst.io/access-plane: octelium
    homelab.rst.io/public-funnel: "false"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - stinkyboi.com
        - "*.stinkyboi.com"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - stinkyboi.com
        - "*.stinkyboi.com"
        - istio-ingressgateway.istio-system.svc.cluster.local
      tls:
        mode: SIMPLE
        credentialName: stinkyboi-com-tls
